style.css
html{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

div.struct > div{
    padding: 1em;
}

div.header{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 1em;
    /*place-items: center;*/

    position: sticky;
    height:fit-content;

    background:#d0d0d0;
    border-style: solid;
    border-radius: 10px;
    border-color: #717171;
}

div.linksList{
    display:grid;
    grid-template-columns: repeat(3, 4.5em);
    height: fit-content;
    justify-content: left;
}

div.linkBox{
    padding: 0.4em;
}

div.linkBox > a > svg{
  fill:black;
}

div.linkBox:hover > a > svg{
  fill:#4d5537;
}

p.pageName{
    font-size: 35px;
    line-height: 0px;

    text-align: center;
    vertical-align: top;
}

div.pageList{
    display: grid;
    grid-template-columns: 100px 100px 100px 100px;
    
    grid-column-gap: 1em;
    grid-auto-rows:minmax(10px, auto);
    justify-content: end;
}

a.link{
    color: #000000;
    text-decoration: none;
}

div.page{
    /*font-size: 20px;*/
    border-style: solid;
    border-width: 2px;
    border-color: #000000;
    background-color: #95a472;
    border-radius: 10px;

    display: flex;

    justify-content: center;
    align-items: center;
    text-align: center;

    min-width: 20px;
    max-width: 100px;
    height: 67px;
    padding: 3px;
}

div.page:hover {
  background-color: #748058;
  color: black;
}

div.wrapper{
    display:grid;
    grid-template-columns: 1fr 4fr;
    grid-column-gap: 1em;
}

div.wrapper > div{
    padding: 1dvh;

    position: sticky;
    top: 3.5em;

    border-radius: 10px;
    background:#d0d0d0;
    border-style: solid;
    border-color: #717171;

    max-height: 81dvh;
    overflow-y: scroll;

    /*Hide scrollbar*/
    -ms-overflow-style: none;
    scrollbar-width: none;
}

div.about{
    height: fit-content;
    min-width: 20em;
}

div.pfp{
    max-width: 22em;
    height: fit-content;
    overflow: hidden;

    border-style: solid;
    border-color: #484848;
    border-radius: 7px;
}

div.pfp > img{
    display: block;
    width: 100%;
    height: 100%;

    max-width: 40em;
    max-height: 25em;

    object-fit:contain;
    object-position: 100% 0%;
}

img.image{
    height: 20em;
}

div.projectList{
    display:grid;

    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 1em;
    grid-row-gap: 1em;
    grid-auto-rows:minmax(100px, auto);
}

div.project{
    background:#95a472;
    padding: 1em;

    border-style: solid;
    border-color: #484848;
    border-radius: 7px;
    border-width: 3px;
}

div.centerer{
    display: grid;
    place-items: center;
}

div.projImg{
    width:fit-content;
    height: fit-content;
    overflow: hidden;

    border-style: solid;
    border-color: #484848;
    border-radius: 7px;
}

div.projImg > img{
    display: block;
    width: 100%;
    height: 100%;

    max-width: 40em;
    max-height: 25em;

    object-fit:contain;
    object-position: 100% 0%;
}

div.experienceList{
    display: grid;
    grid-row-gap: 1em;
}

div.educationList{
    display:flex;
    flex-wrap: wrap;
    gap: 1em;
}

div.skillsList{
    display:flex;
    flex-wrap: wrap;
    gap: 0.2em;
}

div.skill{
    border-style: solid;
    border-width: 2px;
    border-color: #5f6848;
    border-radius: 10px;

    background-color: #95a472;

    text-align: center;
    min-width: 20px;
    padding: 2px;
    padding-left: 4px;
    padding-right: 4px;
}

div.projSkill{
    border-style: solid;
    border-width: 2px;
    border-color: #484848;
    border-radius: 10px;
    
    background-color:#bababa;

    text-align: center;
    min-width: 20px;
    padding: 2px;
    padding-left: 4px;
    padding-right: 4px;
}

p.title{
    text-align:center; 
    vertical-align: text-top;

    font-size: 25px;
    line-height: 30px;  

    position:static;
    overflow-wrap: break-word;
}

p.title2{
    font-size: 20px;
    line-height: 10px;  

    position:static;
    overflow-wrap: break-word;
}

p.subtext{
    font-size: 15px;
    line-height: 20px; 
    
    color:#292929;

    position:static;
    overflow-wrap: break-word;
}

/* Search bar specific css */

.searchBar {
    overflow: hidden;
    background-color: #d0d0d0;
}

.searchBar p {
    float: left;
    display: block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 20px;
}

.searchBar input[type=text] {
    float: right;
    padding: 10px 10px;

    border: solid;
    border-color: #484848;
    border-radius: 7px;

    font-size: 15px;
}

/* Handling responsive screen size */

@media screen and (max-width: 1000px) {
    div.wrapper{
        grid-template-columns: 1fr;
        grid-row-gap: 1em;
    }
    div.wrapper > div{
        position:relative;
        top: 1em;

        max-height: none;
    }
    div.projectList{
        grid-template-columns: 1fr 1fr;
    }
    div.educationList{
    display: grid;
    grid-row-gap: 1em;
    }
}

@media screen and (max-width: 1000px) {
    div.header{
        grid-template-columns: 1fr 1fr;
    }
    div.header.p{
        grid-row: 1 / span 2;
    }
    p.pageName{
        line-height: 40px;
    }
    div.header > div{
        justify-content: center;
    }
}

@media screen and (max-width: 600px) {
    div.header{
        grid-template-columns: 1fr;
    }
    div.header > div{
        justify-content: center;
    }
}

/* Blog specific css*/

div.blogPosts{
    display: grid;
    padding: 1em;
    background:#d0d0d0 ;

    border-style: solid;
    border-color: #717171;
    border-radius: 10px;

    grid-row-gap: 1em;
}

div.post{
    background:#95a472;

    border-style: solid;
    border-color: #484848;
    border-radius: 7px;
    border-width: 3px;
    
    padding: 0.2em;
    padding-left: 1em;
    padding-right: 1em;
}

/* Contributors specific css */
div.contributorsList{
    display:flex;
    flex-wrap: wrap;
    gap: 1em;
}

